force-app/main/default/objects/Coveo_Payload_Log__c/Coveo_Payload_Log__c.object-meta.xml
<CustomObject>
    <label>Coveo Payload Log</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coveo Payload Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>