force-app/main/default/objects/Coveo_Payload_Log__c/fields/IsValid__c.field-meta.xml
<CustomField>
    <fullName>IsValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>