force-app/main/default/objects/Coveo_Payload_Log__c/fields/OperationCount__c.field-meta.xml
<CustomField>
    <fullName>OperationCount__c</fullName>
    <label>Operation Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>