force-app/main/default/objects/Coveo_Payload_Log__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Validation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>